# OS_Lab

./: Readme.md
OS_LAB_No1/: CMakeLists.txt  Readme.md  test_input.txt  test_output.txt
OS_LAB_No1/doc/: 216_РЎРµРґРѕРІ_Р›Р°Р±1.docx  216_Седов_Лаб1.docx
OS_LAB_No1/src/: child.c  parent.c
OS_LAB_No2/: Readme.md  batcher_sort
OS_LAB_No2/doc/: 216_Седов_Лаб1.docx
OS_LAB_No2/src/: main.c
OS_LAB_No3/: Readme.md  strace_output.txt
OS_LAB_No3/doc/: 216_Седов_Лаб3.docx
OS_LAB_No3/src/: client.c  server.c
OS_LAB_No4/: CMakeLists.txt  Readme.md  strace_output1.txt  strace_output2.txt
OS_LAB_No4/doc/: 216_Седов_Лаб4.docx
OS_LAB_No4/include/: functions.h
OS_LAB_No4/src/: lib1.c  lib2.c  program1.c  program2.c
